# simdphrase

./: .gitignore  75-XXX-more-queries.txt  91-XXX-common-tokens-new-inline-never.txt  Cargo.toml  README.md  flake.nix  queries.txt  test_queries.txt
benches/: add.rs  roaringish.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: add.rs  intersections.rs  vp2intersect.rs
src/: allocator.rs  codecs.rs  db.rs  decreasing_window_iter.rs  document.rs  error.rs  indexer.rs  keyword_search.rs  lib.rs  main.rs  pl.rs  roaringish.rs  searcher.rs  stats.rs  utils.rs
src/codecs/: binc.rs  native_u32.rs  pl.rs  zero_copy.rs
src/roaringish/: intersect.rs
src/roaringish/intersect/: binary_search.rs  gallop.rs  gallop_first.rs  gallop_second.rs  naive.rs  simd.rs  vp2intersectq.rs
types/: gallop.md  gallop.txt  hybrid.md  hybrid.txt  intersection.md  intersection.txt  merge.md  merge.txt  single-tokens.md  single-tokens.txt
