cargo-features = ["profile-rustflags"]

[package]
name = "phrase_search"
version = "0.1.0"
edition = "2021"

[dependencies]
heed = "0.21.0"
unicode-segmentation = "1.12.0"
fxhash = "0.2.1"
rkyv = { version = "0.8.9", features = ["unaligned", "pointer_width_64"] }
memmap2 = "0.9.5"
hyperloglogplus = { version = "0.4.1", features = ["const-loop"] }
bumpalo = "3.16.0"
gxhash = "3.4.1"
thiserror = "2.0.11"

[profile.dev]
rustflags = [
    "-C", "target-cpu=native", 
    "-Z", "tune-cpu=native",
    "-C", "llvm-args=-align-all-functions=6",
]

[profile.release]
rustflags = [
    "-C", "target-cpu=native", 
    "-Z", "tune-cpu=native",
    "-C", "llvm-args=-align-all-functions=6",
]