cargo-features = ["profile-rustflags"]

[package]
name = "phrase_search"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gabriel Menezes <gabriel.jorge.menezes@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Gab-Menezes/phrase_search"
description = "Extremely fast phrase search implementation."
keywords = ["fast", "simd", "phrase", "search", "information", "retrieval"]
categories = ["search-engine", "data-structures"]

[dependencies]
heed = "0.21.0"
unicode-segmentation = "1.12.0"
fxhash = "0.2.1"
rkyv = { version = "0.8.9", features = ["unaligned", "pointer_width_64"] }
memmap2 = "0.9.5"
hyperloglogplus = { version = "0.4.1", features = ["const-loop"] }
bumpalo = "3.16.0"
gxhash = "3.4.1"
thiserror = "2.0.11"
log = "0.4.25"

[profile.dev]
rustflags = [
    "-C", "target-cpu=native", 
    "-Z", "tune-cpu=native",
    "-C", "llvm-args=-align-all-functions=6",
]

[profile.release]
rustflags = [
    "-C", "target-cpu=native", 
    "-Z", "tune-cpu=native",
    "-C", "llvm-args=-align-all-functions=6",
]