cargo-features = ["profile-rustflags"]

[package]
name = "phrase_search-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# [dependencies.phrase_search]
# path = ".."

[[bin]]
name = "vp2intersect"
path = "fuzz_targets/vp2intersect.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
rustflags = ["-C", "target-cpu=native", "-Z", "tune-cpu=native"]