cargo-features = ["profile-rustflags"]

[package]
name = "phrase_search-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"

[dependencies.phrase_search]
path = ".."

[patch.crates-io]
rkyv = { git = "https://github.com/rkyv/rkyv.git", features = ["unaligned"] }
bytecheck = { git = "https://github.com/rkyv/bytecheck.git" }
rancor = { git = "https://github.com/rkyv/rancor.git" }

[[bin]]
name = "vp2intersect"
path = "fuzz_targets/vp2intersect.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intersections"
path = "fuzz_targets/intersections.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
codegen-units = 1
panic = "abort"
incremental = false
rustflags = ["-C", "target-cpu=native", "-Z", "tune-cpu=native"]